# llm-identity

./: .env.example  QUICKSTART.md  README.md  docker-compose.yml  note.md
backend/: .env  .env.basic  .env.production.example  .env.txt  .flake8  BV_GUIDE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SETUP.md  __init__.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_all_functions.py  test_api_endpoint.sh  test_perfomance.py  test_performance.py  test_simple.py
backend/agent/: __init__.py  audit_engine.py  config.py  fingerprint_service.py  provenance_guardian.py
backend/api/: __init__.py  dependencies.py  middleware.py  routes.py  routess.py  schemas.py  server.py
backend/fingerprints/: __init__.py  generator.py  mock_fingerprints.json  storage.py  validator.py
backend/model/: __init__.py  cache.py
backend/models/: __init__.py  cache.py  loader.py
backend/scripts/: benchmark.py  check_setup.py  cli.py  deploy_to_sentient.py  docker-entrypoint.sh  fingerprint_model.py  generate_test_models.py  quick_test.sh  setup-guardian.sh  test_agent_locally.py
backend/tests/: conftest.py  run_tests.py  test_agent.py  test_audit.py  test_config.py  test_fingerprint_service.py  test_fingerprints.py  test_model_cache.py  test_storage.py  test_validators.py
backend/tests/integration/: test_agent_integration.py  test_api_integration.py
backend/utils/: __init__.py  crypto.py  logger.py  validators.py
docs/: DEPLOYMENT.md  QUICKSTART.md  SETUP.md
